Bootstrap 3.2 migration fixes:              - Dataset Create:  Placement/size of form fields has changed (see screen cap above) - kind of fixed - rewrite necessary              - Dataset Create: Required fields not indicated (red asterisks)              - Dataset Create: The “x” for removing a location from the form is working but not visible.  Also, there is no space between the location dropdown and the list of selected locations.              - Dataset Create: Red formatting on validation error (on location field) is missing.              - Dataset Create: Spurious colon after location field label.              - Resource create: significant formatting issues on this page.  I won’t try to go into detail, they’re obvious on loading the page              - User profile page: a little extra on the horizontal line, and the datasets/activity stream tabs are not highlighting in orange:              - Request Org:  form needs formatting work

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset_create.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/datasets/dataset_create.css
@@ -1,4 +1,4 @@
-.datasetModule{
+.module.datasetModule{
     margin-left: 100px;
 }
 /*  */
@@ -7,6 +7,9 @@
 	float: left;
 }
 
+input[type=radio], input[type=checkbox] {
+    top: 0;
+}
 
 .field-with-info ~ .info-field{
 	opacity: 0;
@@ -65,7 +68,8 @@
     }
 
     .dataset-required label:after{
-        color: #f2645a
+        color: #f2645a;
+        content: "*";
     }
 
     .editor textarea{
@@ -134,6 +138,8 @@
         padding: 0 0 0 15px;
         font-size: 14px;
         color: #000000;
+        border-radius: 3px;
+        border: 1px solid #ffffff;
     }
 
     .input-prepend .add-on{
@@ -244,13 +250,15 @@
         border-radius: 40px;
         top: -19px;
         color: #007ce0;
-        left: 309px;
+        left: 303px;
         display: none;
+        height: 40px;
+        width: 40px;
     }
 
     .dataset-form-resource-types input[type="radio"]:checked + label.type-url + i {
-        left: 230px;
-        top: -80px;
+        left: 223px;
+        top: -160px;
     }
 
     .dataset-form-resource-types input[type="radio"]:checked + label + i{
